cleanup and update tests